--- a/.drone.yml
+++ b/.drone.yml
@@ -133,15 +133,15 @@ name: production-build-chat-server
 trigger:
   ref:
     include:
-      - refs/tags/chat-server@
+      - refs/tags/chat-server@*
 
 steps:
   # Builds and publishes Docker image for production
   - name: publish-production-chat-server
     image: plugins/kaniko-ecr
     settings:
-      create_repository: true
       dockerfile: chat-server.dockerfile
+      create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
       tags:
