fix promotion stage

--- a/.drone.yml
+++ b/.drone.yml
@@ -156,7 +156,7 @@ steps:
   - name: promote-production-chat-server
     image: drone/cli:1.4.0-alpine
     commands:
-      - drone build promote docs-chat ${DRONE_BUILD_NUMBER} production
+      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} production
     environment:
       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
       DRONE_TOKEN:
