--- a/.drone.yml
+++ b/.drone.yml
@@ -185,8 +185,9 @@ steps:
       kubernetes_token:
         from_secret: prod_kubernetes_token
 
+# ---
 # Ingest service
-
+# ---
 ---
 depends_on: ["test-all"]
 kind: pipeline
@@ -257,3 +258,72 @@ steps:
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
+
+---
+depends_on: ["test-all"]
+kind: pipeline
+type: kubernetes
+name: production-build-ingest-service
+
+trigger:
+  event:
+    - tag
+  ref:
+    include:
+      - refs/tags/ingest-v*
+
+steps:
+  # Builds and publishes Docker image for production
+  - name: publish-production-ingest-service
+    image: plugins/kaniko-ecr
+    settings:
+      dockerfile: ingest-service.dockerfile
+      create_repository: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: docs/${DRONE_REPO_NAME}-ingest-service
+      tags:
+        - git-${DRONE_COMMIT_SHA:0:7}-production
+        - latest-production
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+
+  # Promotes current drone build to production environment
+  - name: promote-production-ingest-service
+    image: drone/cli:1.4.0-alpine
+    commands:
+      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} production
+    environment:
+      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+      DRONE_TOKEN:
+        from_secret: drone_token
+
+---
+kind: pipeline
+type: kubernetes
+name: production-deploy-ingest-service
+
+trigger:
+  event:
+    - promote
+  target:
+    - production
+
+steps:
+  # Deploys Docker image associated with production build that triggered promotion
+  # TODO: update to use cron chart
+  - name: deploy-production-ingest-service
+    image: quay.io/mongodb/drone-helm:v3
+    settings:
+      chart: mongodb/cronjobs
+      chart_version: 1.7.1
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: docs
+      release: ingest-service
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-ingest-service
+      values_files:
+        - ingest/environments/production.yml
+      api_server: https://api.prod.corp.mongodb.com
+      kubernetes_token:
+        from_secret: prod_kubernetes_token
