--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -21,7 +21,6 @@
   "license": "ISC",
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.2",
-    "@jest-mock/express": "^2.0.2",
     "chat-core": "file:../chat-core",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
@@ -53,6 +52,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.2",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "supertest": "^6.3.3",
