(DOCSP-30601): Create production release system (#41)
* add lerna to project

* stub out prod pipeline + add monorepo support

* more monorepo conf

* release-it conf

* Release 0.0.2

* update release-it default release name

* Release 0.0.1

* add release-it conf for relevant packages

* update release conf

* add release-it conf for relevant packages

* fix lint err

* Release 0.0.3

* update release-it

* Release 0.0.4-0

* Release 0.0.4

* update package

* Release 0.0.5

* update README + drone

* fix GH actions/pr template

* remove unused lerna scripts

* simplify drone conf

* trigger rerun

* fix package.json

* fix lint err

* correct jest version

* fix failing tests

* prod env setup

* remove old comment

* update server release conf

* Release 1.0.1

* fix tag naming in drone

* update package-lock

* fix promotion stage

* update release-it conf

* update release scripts

* Release 1.0.2

* update README instructions

* alt approach to limit by tag

* Apply suggestions from code review

* remove trigger file

--- a/chat-server/.release-it.json
+++ b/chat-server/.release-it.json
@@ -2,13 +2,13 @@
   "git": {
     "tag": false,
     "push": true,
-    "tagName": "chat-ui-v${version}"
+    "tagName": "chat-server-v${version}"
   },
   "npm": {
     "publish": false
   },
   "github": {
-    "releaseName": "chat-ui-v${version}",
+    "releaseName": "chat-server-v${version}",
     "draft": true,
     "release": true
   },
