--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,3 @@
----
-# ---
-# Chat Server pipelines
-# ---
 kind: pipeline
 type: kubernetes
 name: test-all
@@ -22,19 +18,11 @@ steps:
   - name: test
     image: node:18
     commands:
-      - cd chat-core
       - npm ci
-      - npm test
       - npm run build
-      - cd ..
-      - cd chat-server
-      - npm ci
       - npm run lint
       - npm run test
-      - cd ..
-      - cd ingest
-      - npm ci
-      - npm run test
+
     environment:
       PORT: 3000
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
@@ -55,6 +43,9 @@ steps:
       DEVCENTER_CONNECTION_URI:
         from_secret: devcenter_connection_uri
 
+# ---
+# Chat Server pipelines
+# ---
 ---
 depends_on: ["test-all"]
 kind: pipeline
@@ -66,6 +57,7 @@ trigger:
     - main
   event:
     - push
+
   paths:
     include:
       - chat-server/**/*
@@ -127,12 +119,6 @@ steps:
         from_secret: staging_kubernetes_token
 
 ---
-# --------------------
-# TODO: Validate production deployment.
-# Not worrying about production stuff just yet.
-# The below config *should* work, but it hasn't been tested yet, so odds are that
-# it will need to be tweaked.
-# --------------------
 depends_on: ["test-all"]
 kind: pipeline
 type: kubernetes
@@ -141,12 +127,16 @@ name: production-build-chat-server
 trigger:
   event:
     - tag
+  ref:
+    include:
+      - refs/tags/chat-server-v*
 
 steps:
   # Builds and publishes Docker image for production
   - name: publish-production-chat-server
     image: plugins/kaniko-ecr
     settings:
+      dockerfile: chat-server.dockerfile
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
@@ -162,7 +152,7 @@ steps:
   - name: promote-production-chat-server
     image: drone/cli:1.4.0-alpine
     commands:
-      - drone build promote docs-chat ${DRONE_BUILD_NUMBER} production
+      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} production
     environment:
       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
       DRONE_TOKEN:
