--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.2",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "release-it": "^15",
