--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongodb-docs-chatbot-ui",
+  "name": "chat-ui",
   "description": "UI components for the MongoDB Docs Chatbot",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
