--- a/ingest/package.json
+++ b/ingest/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "^29",
     "mongodb-memory-server": "^8.13.0",
+    "nock": "^13.3.2",
     "prettier": "^2",
     "release-it": "^15",
     "ts-jest": "^29",
