--- a/ingest/package.json
+++ b/ingest/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "^29",
+    "jsonl-parse-stringify": "^1.0.3",
     "mongodb-memory-server": "^8.13.0",
     "nock": "^13.3.2",
     "prettier": "^2",
