fix ts build errs

--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -28,6 +28,7 @@
     "build:static-site:staging": "tsc && vite build --config vite.config.static-site.js --mode staging",
     "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
     "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
+    "build": "npm run build:static-site:staging",
     "format": "prettier ./src --write",
     "format:check": "prettier ./src --check",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -83,6 +84,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0",
     "release-it": "^15.11.0",
     "storybook": "^7.0.20",
     "typescript": "^5.0.2",
