--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint": "lerna run lint"
   },
   "devDependencies": {
-    "lerna": "^5.6.2",
-    "nock": "^13.3.2"
+    "lerna": "^5.6.2"
   }
 }
