--- a/mongodb-atlas/.env.example
+++ b/mongodb-atlas/.env.example
@@ -4,3 +4,5 @@ DB_NAME=docs-chatbot-dev
 COLL_NAME=content
 ATLAS_ADMIN_API_KEY=<API KEY>
 ATLAS_ADMIN_API_SECRET=<API SECRET>
+MONGODB_CONNECTION_URI="<MongoDB Connection URI>" # note: having problems if not wrapped in quotes...not sure why
+DUMP_DB="docs-chatbot-dev-reset"
