--- a/ingest/package.json
+++ b/ingest/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf build",
     "build": "tsc -b",
     "watch": "tsc -b -w",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "jest --forceExit",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
@@ -21,7 +21,7 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7.22.5",
     "@types/deep-equal": "^1.0.1",
-    "@types/jest": "^26",
+    "@types/jest": "^29.5.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5",
@@ -30,11 +30,13 @@
     "eslint-config-prettier": "^8",
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
-    "jest": "^29",
+    "jest": "^29.5.0",
+    "jsonl-parse-stringify": "^1.0.3",
     "mongodb-memory-server": "^8.13.0",
+    "nock": "^13.3.2",
     "prettier": "^2",
     "release-it": "^15",
-    "ts-jest": "^29",
+    "ts-jest": "^29.1.0",
     "typedoc": "^0",
     "typescript": "^5"
   },
