--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
     "node-stdlib-browser": "^1.2.0",
+    "postcss": "^8.4.27",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
