--- a/chat-ui/.env.staging
+++ b/chat-ui/.env.staging
@@ -1,1 +1,1 @@
-VITE_SERVER_BASE_URL=https://chat-server.docs.staging.corp.mongodb.com
+VITE_SERVER_BASE_URL=https://chat-server.docs.staging.corp.mongodb.com/api/v1
