--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -50,19 +50,24 @@
     "@leafygreen-ui/icon-button": "^15.0.11",
     "@leafygreen-ui/leafygreen-provider": "^3.1.3",
     "@leafygreen-ui/loading-indicator": "^1.0.0",
+    "@leafygreen-ui/menu": "^22.0.2",
     "@leafygreen-ui/modal": "^15.0.3",
     "@leafygreen-ui/skeleton-loader": "^1.0.1",
     "@leafygreen-ui/text-input": "^12.1.13",
     "@leafygreen-ui/typography": "^16.5.0",
+    "@lg-chat/avatar": "^1.0.0",
+    "@lg-chat/input-bar": "^1.0.0",
+    "@lg-chat/lg-markdown": "^1.0.0",
+    "@lg-chat/message": "^1.0.0",
+    "@lg-chat/message-feed": "^1.0.0",
+    "@lg-chat/message-rating": "^1.0.0",
+    "@lg-chat/title-bar": "^1.0.0",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@uidotdev/usehooks": "^2.0.1",
     "buffer": "^6.0.3",
     "chat-core": "file:../chat-core",
     "esbuild": "^0.17.19",
     "prettier": "^2.8.8",
     "react-markdown": "^8.0.7",
-    "react-merge-refs": "^2.0.2",
-    "react-transition-group": "^4.4.5",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
