--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -41,6 +41,7 @@
     "exponential-backoff": "^3.1.1",
     "mongodb": "^5.6.0",
     "openai": "^3",
-    "winston": "^3"
+    "winston": "^3",
+    "zod": "^3.21.4"
   }
 }
