--- a/.drone.yml
+++ b/.drone.yml
@@ -120,6 +120,9 @@ steps:
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
+    when:
+      branch:
+        - main
 
 ---
 depends_on: ["test-all"]
@@ -171,9 +174,6 @@ trigger:
     - promote
   target:
     - staging
-  when:
-    ref:
-      - refs/tags/chat-server-qa
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
@@ -190,6 +190,9 @@ steps:
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
+    when:
+      ref:
+        - refs/tags/chat-server-qa
 
 ---
 depends_on: ["test-all"]
