--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -26,9 +26,11 @@
     "build:component": "tsc && vite build --config vite.config.component.js",
     "build:static-site:dev": "tsc && vite build --config vite.config.static-site.js --mode development",
     "build:static-site:staging": "tsc && vite build --config vite.config.static-site.js --mode staging",
-    "build": "npm run build:static-site:staging",
+    "build:static-site:qa": "tsc && vite build --config vite.config.static-site.js --mode qa",
     "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
     "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
+    "preview:static-site:qa": "npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
+    "build": "if [[ \"$ENVIRONMENT\" == \"qa\" ]]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "format": "prettier ./src --write",
     "format:check": "prettier ./src --check",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
