--- a/seed-content/package.json
+++ b/seed-content/package.json
@@ -7,7 +7,8 @@
     "build": "rm -rf ./build/ && tsc",
     "seed-content:dev": "npm run build && node ./build/index.js .env",
     "seed-content:test": "npm run build && node ./build/index.js .env.test",
-    "seed-content:staging": "npm run build && node ./build/index.js .env.staging"
+    "seed-content:staging": "npm run build && node ./build/index.js .env.staging",
+    "seed-content:qa": "npm run build && node ./build/index.js .env.qa"
   },
   "engines": {
     "node": "^18",
