--- a/ingest/package.json
+++ b/ingest/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
+    "eslint-plugin-jsdoc": "^46.4.5",
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "^29.5.0",
