--- a/.drone.yml
+++ b/.drone.yml
@@ -74,11 +74,22 @@ steps:
   # Builds and publishes Docker image for staging
   - name: publish-staging-chat-server
     image: plugins/kaniko-ecr
+    environment:
+      LG_ARTIFACTORY_PASSWORD:
+        from_secret: lg_artifactory_password
+      LG_ARTIFACTORY_USERNAME:
+        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_EMAIL:
+        from_secret: lg_artifactory_email
     settings:
       dockerfile: chat-server.dockerfile
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
+      build_args:
+        - LG_ARTIFACTORY_PASSWORD
+        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-staging
         - latest-staging
@@ -145,6 +156,12 @@ steps:
     image: plugins/kaniko-ecr
     environment:
       ENVIRONMENT: qa
+      LG_ARTIFACTORY_PASSWORD:
+        from_secret: lg_artifactory_password
+      LG_ARTIFACTORY_USERNAME:
+        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_EMAIL:
+        from_secret: lg_artifactory_email
     settings:
       dockerfile: chat-server.dockerfile
       create_repository: true
@@ -152,6 +169,9 @@ steps:
       repo: docs/${DRONE_REPO_NAME}-chat-server
       build_args:
         - ENVIRONMENT
+        - LG_ARTIFACTORY_PASSWORD
+        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-qa
         - latest-qa
@@ -217,11 +237,22 @@ steps:
   # Builds and publishes Docker image for production
   - name: publish-production-chat-server
     image: plugins/kaniko-ecr
+    environment:
+      LG_ARTIFACTORY_PASSWORD:
+        from_secret: lg_artifactory_password
+      LG_ARTIFACTORY_USERNAME:
+        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_EMAIL:
+        from_secret: lg_artifactory_email
     settings:
       dockerfile: chat-server.dockerfile
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
+      build_args:
+        - LG_ARTIFACTORY_PASSWORD
+        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-production
         - latest-production
