updated ingest service test

--- a/.drone.yml
+++ b/.drone.yml
@@ -52,262 +52,262 @@ steps:
 # ---
 # Chat Server pipelines
 # ---
----
-depends_on: ["test-all"]
-kind: pipeline
-type: kubernetes
-name: staging-build-chat-server
-
-trigger:
-  branch:
-    - main
-    - lg-chat # TODO - Delete before merge
-  # TODO uncomment the push event
-  # event:
-  #   - push
-
-  paths:
-    include:
-      - chat-server/**/*
-      - chat-core/**/*
-      - chat-ui/**/*
-
-steps:
-  # Builds and publishes Docker image for staging
-  - name: publish-staging-chat-server
-    image: plugins/kaniko-ecr
-    environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
-      LG_ARTIFACTORY_EMAIL:
-        from_secret: lg_artifactory_email
-    settings:
-      dockerfile: chat-server.dockerfile
-      create_repository: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
-      repo: docs/${DRONE_REPO_NAME}-chat-server
-      build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
-        - LG_ARTIFACTORY_EMAIL
-      tags:
-        - git-${DRONE_COMMIT_SHA:0:7}-staging
-        - latest-staging
-      access_key:
-        from_secret: ecr_access_key
-      secret_key:
-        from_secret: ecr_secret_key
-
-  # Promotes current drone build to staging environment
-  - name: promote-staging-chat-server
-    image: drone/cli:1.4.0-alpine
-    commands:
-      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} staging
-    environment:
-      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
-      DRONE_TOKEN:
-        from_secret: drone_token
-
 # ---
+# depends_on: ["test-all"]
 # kind: pipeline
 # type: kubernetes
-# name: staging-deploy-chat-server
+# name: staging-build-chat-server
 
 # trigger:
-#   event:
-#     - promote
-#   target:
-#     - staging
+#   branch:
+#     - main
+#     - lg-chat # TODO - Delete before merge
+#   # TODO uncomment the push event
+#   # event:
+#   #   - push
 
-# steps:
-#   # Deploys docker image associated with staging build that triggered promotion
-#   - name: deploy-staging-chat-server
-#     image: quay.io/mongodb/drone-helm:v3
-#     settings:
-#       chart: mongodb/web-app
-#       chart_version: 4.12.3
-#       add_repos: [mongodb=https://10gen.github.io/helm-charts]
-#       namespace: docs
-#       release: chat-server
-#       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-staging,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-server.docs.staging.corp.mongodb.com
-#       values_files: ["chat-server/environments/staging.yml"]
-#       api_server: https://api.staging.corp.mongodb.com
-#       kubernetes_token:
-#         from_secret: staging_kubernetes_token
-#     when:
-#       branch:
-#         - main
-#         - lg-chat # TODO - Delete before merge
----
-depends_on: ["test-all"]
-kind: pipeline
-type: kubernetes
-name: qa-build-chat-server
-
-trigger:
-  branch:
-    - lg-chat # TODO - Delete before merge
-
-# trigger:
-#   event:
-#     - tag
-#   ref:
+#   paths:
 #     include:
-#       - refs/tags/chat-server-qa-*
-
-steps:
-  # Builds and publishes Docker image for qa
-  - name: publish-qa-chat-server
-    image: plugins/kaniko-ecr
-    environment:
-      ENVIRONMENT: qa
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
-      LG_ARTIFACTORY_EMAIL:
-        from_secret: lg_artifactory_email
-    settings:
-      dockerfile: chat-server.dockerfile
-      create_repository: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
-      repo: docs/${DRONE_REPO_NAME}-chat-server
-      build_args:
-        - ENVIRONMENT
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
-        - LG_ARTIFACTORY_EMAIL
-      tags:
-        - git-${DRONE_COMMIT_SHA:0:7}-qa
-        - latest-qa
-      access_key:
-        from_secret: ecr_access_key
-      secret_key:
-        from_secret: ecr_secret_key
-
-  # Promotes current drone build to staging environment (QA server is in staging namespace)
-  - name: promote-qa-chat-server
-    image: drone/cli:1.4.0-alpine
-    commands:
-      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} staging
-    environment:
-      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
-      DRONE_TOKEN:
-        from_secret: drone_token
-
-# ---
-# kind: pipeline
-# type: kubernetes
-# name: qa-deploy-chat-server
-
-# trigger:
-#   event:
-#     - promote
-#   target:
-#     - staging
+#       - chat-server/**/*
+#       - chat-core/**/*
+#       - chat-ui/**/*
 
 # steps:
-#   # Deploys docker image associated with staging build that triggered promotion
-#   - name: deploy-qa-chat-server
-#     image: quay.io/mongodb/drone-helm:v3
+#   # Builds and publishes Docker image for staging
+#   - name: publish-staging-chat-server
+#     image: plugins/kaniko-ecr
+#     environment:
+#       LG_ARTIFACTORY_PASSWORD:
+#         from_secret: lg_artifactory_password
+#       LG_ARTIFACTORY_USERNAME:
+#         from_secret: lg_artifactory_username
+#       LG_ARTIFACTORY_EMAIL:
+#         from_secret: lg_artifactory_email
 #     settings:
-#       chart: mongodb/web-app
-#       chart_version: 4.12.3
-#       add_repos: [mongodb=https://10gen.github.io/helm-charts]
-#       namespace: docs
-#       release: chat-server-qa
-#       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-qa,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-qa.docs.staging.corp.mongodb.com
-#       values_files: ["chat-server/environments/qa.yml"]
-#       api_server: https://api.staging.corp.mongodb.com
-#       kubernetes_token:
-#         from_secret: staging_kubernetes_token
-#     when:
-#       ref:
-#         - refs/tags/chat-server-qa-*
+#       dockerfile: chat-server.dockerfile
+#       create_repository: true
+#       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+#       repo: docs/${DRONE_REPO_NAME}-chat-server
+#       build_args:
+#         - LG_ARTIFACTORY_PASSWORD
+#         - LG_ARTIFACTORY_USERNAME
+#         - LG_ARTIFACTORY_EMAIL
+#       tags:
+#         - git-${DRONE_COMMIT_SHA:0:7}-staging
+#         - latest-staging
+#       access_key:
+#         from_secret: ecr_access_key
+#       secret_key:
+#         from_secret: ecr_secret_key
 
----
-depends_on: ["test-all"]
-kind: pipeline
-type: kubernetes
-name: production-build-chat-server
+#   # Promotes current drone build to staging environment
+#   - name: promote-staging-chat-server
+#     image: drone/cli:1.4.0-alpine
+#     commands:
+#       - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} staging
+#     environment:
+#       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+#       DRONE_TOKEN:
+#         from_secret: drone_token
 
-trigger:
-  branch:
-    - lg-chat # TODO - Delete before merge
+# # ---
+# # kind: pipeline
+# # type: kubernetes
+# # name: staging-deploy-chat-server
 
-# trigger:
-#   event:
-#     - tag
-#   ref:
-#     include:
-#       - refs/tags/chat-server-v*
+# # trigger:
+# #   event:
+# #     - promote
+# #   target:
+# #     - staging
 
-steps:
-  # Builds and publishes Docker image for production
-  - name: publish-production-chat-server
-    image: plugins/kaniko-ecr
-    environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
-      LG_ARTIFACTORY_EMAIL:
-        from_secret: lg_artifactory_email
-    settings:
-      dockerfile: chat-server.dockerfile
-      create_repository: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
-      repo: docs/${DRONE_REPO_NAME}-chat-server
-      build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
-        - LG_ARTIFACTORY_EMAIL
-      tags:
-        - git-${DRONE_COMMIT_SHA:0:7}-production
-        - latest-production
-      access_key:
-        from_secret: ecr_access_key
-      secret_key:
-        from_secret: ecr_secret_key
-
-  # Promotes current drone build to production environment
-  - name: promote-production-chat-server
-    image: drone/cli:1.4.0-alpine
-    commands:
-      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} production
-    environment:
-      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
-      DRONE_TOKEN:
-        from_secret: drone_token
-
+# # steps:
+# #   # Deploys docker image associated with staging build that triggered promotion
+# #   - name: deploy-staging-chat-server
+# #     image: quay.io/mongodb/drone-helm:v3
+# #     settings:
+# #       chart: mongodb/web-app
+# #       chart_version: 4.12.3
+# #       add_repos: [mongodb=https://10gen.github.io/helm-charts]
+# #       namespace: docs
+# #       release: chat-server
+# #       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-staging,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-server.docs.staging.corp.mongodb.com
+# #       values_files: ["chat-server/environments/staging.yml"]
+# #       api_server: https://api.staging.corp.mongodb.com
+# #       kubernetes_token:
+# #         from_secret: staging_kubernetes_token
+# #     when:
+# #       branch:
+# #         - main
+# #         - lg-chat # TODO - Delete before merge
 # ---
+# depends_on: ["test-all"]
 # kind: pipeline
 # type: kubernetes
-# name: production-deploy-chat-server
+# name: qa-build-chat-server
 
 # trigger:
-#   event:
-#     - promote
-#   target:
-#     - production
+#   branch:
+#     - lg-chat # TODO - Delete before merge
+
+# # trigger:
+# #   event:
+# #     - tag
+# #   ref:
+# #     include:
+# #       - refs/tags/chat-server-qa-*
 
 # steps:
-#   # Deploys Docker image associated with production build that triggered promotion
-#   - name: deploy-production-chat-server
-#     image: quay.io/mongodb/drone-helm:v3
+#   # Builds and publishes Docker image for qa
+#   - name: publish-qa-chat-server
+#     image: plugins/kaniko-ecr
+#     environment:
+#       ENVIRONMENT: qa
+#       LG_ARTIFACTORY_PASSWORD:
+#         from_secret: lg_artifactory_password
+#       LG_ARTIFACTORY_USERNAME:
+#         from_secret: lg_artifactory_username
+#       LG_ARTIFACTORY_EMAIL:
+#         from_secret: lg_artifactory_email
 #     settings:
-#       chart: mongodb/web-app
-#       chart_version: 4.12.3
-#       add_repos: [mongodb=https://10gen.github.io/helm-charts]
-#       namespace: docs
-#       release: docs-chat
-#       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-server.docs.prod.corp.mongodb.com
-#       values_files: ["chat-server/environments/production.yml"]
-#       api_server: https://api.prod.corp.mongodb.com
-#       kubernetes_token:
-#         from_secret: prod_kubernetes_token
+#       dockerfile: chat-server.dockerfile
+#       create_repository: true
+#       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+#       repo: docs/${DRONE_REPO_NAME}-chat-server
+#       build_args:
+#         - ENVIRONMENT
+#         - LG_ARTIFACTORY_PASSWORD
+#         - LG_ARTIFACTORY_USERNAME
+#         - LG_ARTIFACTORY_EMAIL
+#       tags:
+#         - git-${DRONE_COMMIT_SHA:0:7}-qa
+#         - latest-qa
+#       access_key:
+#         from_secret: ecr_access_key
+#       secret_key:
+#         from_secret: ecr_secret_key
+
+#   # Promotes current drone build to staging environment (QA server is in staging namespace)
+#   - name: promote-qa-chat-server
+#     image: drone/cli:1.4.0-alpine
+#     commands:
+#       - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} staging
+#     environment:
+#       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+#       DRONE_TOKEN:
+#         from_secret: drone_token
+
+# # ---
+# # kind: pipeline
+# # type: kubernetes
+# # name: qa-deploy-chat-server
+
+# # trigger:
+# #   event:
+# #     - promote
+# #   target:
+# #     - staging
+
+# # steps:
+# #   # Deploys docker image associated with staging build that triggered promotion
+# #   - name: deploy-qa-chat-server
+# #     image: quay.io/mongodb/drone-helm:v3
+# #     settings:
+# #       chart: mongodb/web-app
+# #       chart_version: 4.12.3
+# #       add_repos: [mongodb=https://10gen.github.io/helm-charts]
+# #       namespace: docs
+# #       release: chat-server-qa
+# #       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-qa,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-qa.docs.staging.corp.mongodb.com
+# #       values_files: ["chat-server/environments/qa.yml"]
+# #       api_server: https://api.staging.corp.mongodb.com
+# #       kubernetes_token:
+# #         from_secret: staging_kubernetes_token
+# #     when:
+# #       ref:
+# #         - refs/tags/chat-server-qa-*
+
+# ---
+# depends_on: ["test-all"]
+# kind: pipeline
+# type: kubernetes
+# name: production-build-chat-server
+
+# trigger:
+#   branch:
+#     - lg-chat # TODO - Delete before merge
+
+# # trigger:
+# #   event:
+# #     - tag
+# #   ref:
+# #     include:
+# #       - refs/tags/chat-server-v*
+
+# steps:
+#   # Builds and publishes Docker image for production
+#   - name: publish-production-chat-server
+#     image: plugins/kaniko-ecr
+#     environment:
+#       LG_ARTIFACTORY_PASSWORD:
+#         from_secret: lg_artifactory_password
+#       LG_ARTIFACTORY_USERNAME:
+#         from_secret: lg_artifactory_username
+#       LG_ARTIFACTORY_EMAIL:
+#         from_secret: lg_artifactory_email
+#     settings:
+#       dockerfile: chat-server.dockerfile
+#       create_repository: true
+#       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+#       repo: docs/${DRONE_REPO_NAME}-chat-server
+#       build_args:
+#         - LG_ARTIFACTORY_PASSWORD
+#         - LG_ARTIFACTORY_USERNAME
+#         - LG_ARTIFACTORY_EMAIL
+#       tags:
+#         - git-${DRONE_COMMIT_SHA:0:7}-production
+#         - latest-production
+#       access_key:
+#         from_secret: ecr_access_key
+#       secret_key:
+#         from_secret: ecr_secret_key
+
+#   # Promotes current drone build to production environment
+#   - name: promote-production-chat-server
+#     image: drone/cli:1.4.0-alpine
+#     commands:
+#       - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} production
+#     environment:
+#       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+#       DRONE_TOKEN:
+#         from_secret: drone_token
+
+# # ---
+# # kind: pipeline
+# # type: kubernetes
+# # name: production-deploy-chat-server
+
+# # trigger:
+# #   event:
+# #     - promote
+# #   target:
+# #     - production
+
+# # steps:
+# #   # Deploys Docker image associated with production build that triggered promotion
+# #   - name: deploy-production-chat-server
+# #     image: quay.io/mongodb/drone-helm:v3
+# #     settings:
+# #       chart: mongodb/web-app
+# #       chart_version: 4.12.3
+# #       add_repos: [mongodb=https://10gen.github.io/helm-charts]
+# #       namespace: docs
+# #       release: docs-chat
+# #       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-server.docs.prod.corp.mongodb.com
+# #       values_files: ["chat-server/environments/production.yml"]
+# #       api_server: https://api.prod.corp.mongodb.com
+# #       kubernetes_token:
+# #         from_secret: prod_kubernetes_token
 
 # ---
 # Ingest service
